- Bugfix: dropping a prepopulated CWorkingArea on anything did throw an unnecessary SplitDropTreeException

[v1.1.2p17]
- API: drag and drop operation can be cancelled by pressing CControl.KEY_CANCEL_OPERATION (default is ESCAPE)
- API: refined behavior of ActionContentModifier, if a modifier represents many properties (e.g. disabled and vertical) then it can have many backup modifiers (e.g. just 'disabled' or just 'vertical')
- Bugfix: many small fixes by Karl-Philipp Richter
- Bugfix: DockStations having width or height smaller or equal to 0 do no longer support drag and drop (because they are invisible to the user)
- API: Added DockStationDropLayerFactory, a way for clients to define which areas of the screen can be targets for drag-and-drop operations

[v1.1.2p17a]
- Bugfix: when moving around a working-area, the are could not be stacked with normal dockables because the WorkingAreaAcceptance believed that the working-area can only be combined with itself
- Bugfix: when calling CDockable.setLocationAside an exception could be thrown if a PlaceholderMap with the wrong format was stored in the layout. Maps with the wrong format are now silently ignored

[v1.1.2p17b]
- Bugfix: changed how CDockables behave when setting or reading their location. A CDockable that is a "hidden root station" (a DockStation that is registered as root but without parent DockStation) is treated as it was invisible. As a result, calling "setLocation" will store the location instead of directly trying to apply it (which would fail because a root item cannot be moved)

[v1.1.2p18]
- API: New method AbstractCDockable.toFront allows clients to focus a Dockable, and a child Component of that Dockable with only one method call

[v1.1.2p18a]
- Bugfix: Tabs of the Flat-theme did not respect the foreground color that was set by the client.

[v1.1.2p19]
- Bugfix: An exception was thrown when a CDockable was externalized, the eclipse-theme was selected, and someone was calling CControl.destroy 